code cleanup
needs complete refactor, this code is absolute crap
need to match Thin better and just replace EventMachine and the C parser